--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<head>
+	<title>My Portfolio</title>
+</head>
+<body>
+	<header>
+		<img src="logo.png" alt="My Logo">
+		<h1>My Name</h1>
+		<h2>Web Designer and Developer</h2>
+	</header>
+	<main>
+		<section>
+			<h3>Featured Work</h3>
+			<ul>
+				<li>
+					<a href="project1.html"><img src="project1_thumb.png" alt="Project 1"></a>
+					<p>Project 1 description goes here</p>
+				</li>
+				<li>
+					<a href="project2.html"><img src="project2_thumb.png" alt="Project 2"></a>
+					<p>Project 2 description goes here</p>
+				</li>
+				<li>
+					<a href="project3.html"><img src="project3_thumb.png" alt="Project 3"></a>
+					<p>Project 3 description goes here</p>
+				</li>
+			</ul>
+		</section>
+		<section>
+			<h3>Testimonials</h3>
+			<ul>
+				<li>
+					<blockquote>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</blockquote>
+					<p>- John Smith, CEO of Example Company</p>
+				</li>
+				<li>
+					<blockquote>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</blockquote>
+					<p>- Jane Doe, Marketing Manager at Sample Inc.</p>
+				</li>
+			</ul>
+		</section>
+	</main>
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About Me</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+			</ul>
+		</nav>
+		<p>&copy; 2023 My Portfolio. All rights reserved.</p>
+	</footer>
+</body>
 </html>
