Add stylesheet file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Portfolio</title>
+    <meta charset="UTF-8">
+    <title>My Professional Portfolio</title>
+    <link rel="stylesheet" href="stylesheets/stylesheet.css">
 </head>
 <body>
 	<header>
