Add some irrelevant code

--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>My Professional Portfolio</title>
-    <link rel="stylesheet" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/home.css">
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css"> -->
 </head>
 <body>
-	<header>
-		<img src="logo.png" alt="My Logo">
+    <div class="dynamic-background">
+    </div>
+
+	<!-- <header>
+		 <img src="images/rocket_logo.jpg" alt="My Logo">
 		<h1>My Name</h1>
 		<h2>Web Designer and Developer</h2>
+
+        <nav>
+            <ul class="flex-container">
+              <li class="flex-item"><a href="#home" class="active">Home</a></li>
+              <li class="flex-item"><a href="#about">About</a></li>
+              <li class="flex-item"><a href="#portfolio">Portfolio</a></li>
+              <li class="flex-item"><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>       
 	</header>
 	<main>
 		<section>
@@ -45,14 +58,14 @@
 	</main>
 	<footer>
 		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About Me</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact Me</a></li>
+			<ul class="flex-container">
+				<li class="flex-item"><a href="index.html">Home</a></li>
+				<li class="flex-item"><a href="about.html">About Me</a></li>
+				<li class="flex-item"><a href="portfolio.html">Portfolio</a></li>
+				<li class="flex-item"><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 		<p>&copy; 2023 My Portfolio. All rights reserved.</p>
-	</footer>
+	</footer> -->
 </body>
 </html>
